# Skillbox-Project

./: CMakeLists.txt  README.md  config.json
include/: ConverterJson.h  InvertedIndex.h  SearchServer.h
src/: ConverterJson.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
